增加了时域 频域显示 添加录音功能 添加了内置的几个测试音频 test.wav~test5.wav

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,12 @@
     </LinearLayout>
 
     <com.citrontek.audiodetection.view.ChartView
+        android:id="@+id/voice_view"
         android:layout_width="match_parent"
         android:layout_height="300dp" />
 
-    <com.citrontek.audiodetection.view.ChartView
+    <com.citrontek.audiodetection.view.ChartViewFFT
+        android:id="@+id/fft_view"
         android:layout_width="match_parent"
         android:layout_height="300dp"/>
 </LinearLayout>
